--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
+    "nodemon": "^2.0.15",
+    "sharp": "^0.30.3",
+    "stripe": "^8.219.0",
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   }
 }
